--- a/src/app/Components/problem-details/problem-details.component.css
+++ b/src/app/Components/problem-details/problem-details.component.css
@@ -55,7 +55,7 @@
 
 .description {
     background-color: #ddd;
-    border-radius: 10px;
+    /* border-radius: 10px; */
     box-shadow: 0 1px 10px 0 rgba(0, 0, 0, .08);
     font-family: Merriweather, Full-Width-Quoration-Marks, -apple-system, BlinkMacSystemFont, Segoe UI, Roboto, Helvetica Neue, Helvetica, PingFang SC, Hiragino Sans GB, Microsoft YaHei, SimSun, FontAwesome, sans-serif;
     font-size: 15px;
