--- a/src/app/Components/problem/problem.component.html
+++ b/src/app/Components/problem/problem.component.html
@@ -68,9 +68,9 @@
                 <tbody>
                     <tr *ngFor="let problem of Problems; trackBy:trackByProblemCode; let i = index; ">
                         <td><i class="fas fa-star"></i></td>
-                        <td> {{ problem.oj }} </td>
-                        <td><a [href]="problem.problemLink" target="_blank">{{ problem.problemCode }}</a></td>
-                        <td> <a href="problem/{{problem.oj}}/{{problem.problemCode}}">{{ problem.problemTitle }}</a>
+                        <td> {{ problem.onlineJudge }} </td>
+                        <td><a [href]="problem.problemLink" target="_blank">{{ problem.code }}</a></td>
+                        <td> <a href="problem/{{problem.onlineJudge}}/{{problem.code}}">{{ problem.title }}</a>
                         </td>
                         <td><a [href]="problem.contestLink" target="_blank">{{ problem.contestName }}</a></td>
                         <td>{{ problem.solvedCount }}</td>
