get instance of ContestDetailsComponent

--- a/src/app/Components/contest-details/contest-details.component.html
+++ b/src/app/Components/contest-details/contest-details.component.html
@@ -47,10 +47,9 @@
                     <div class="col-4 text-end" id="info-remaining"></div>
                
                     <!-- Problem Hashtag -->
-                    <div class=" col-xs-6 col-sm-12 d-flex" *ngFor="let problem of problemSet; trackBy:problemHashtag; let i = index; ">
-                         <a type="button" class="btn " style="text-decoration: none; color:blue" >{{problem.problemHashtag}} </a>
-                    </div>
-                
+                  <!-- contest-details.component.html -->
+
+
                 </div>
             </div>
         </div>
