chore: Update problem service and problem details component

--- a/src/app/Components/problem/problem.component.html
+++ b/src/app/Components/problem/problem.component.html
@@ -43,8 +43,7 @@
                             <select [(ngModel)]="oj" id="OJId" name="OJId" class="search_text" style="width:100%"
                                 (change)="onEnterPress()">
                                 <option value="">All</option>
-                                <option value="CodeForces">CodeForces</option>
-                                <option value="AtCoder">AtCoder</option>
+                                <option *ngFor="let onlineJudge of onlineJudges" [value]="onlineJudge">{{onlineJudge}}</option>
                             </select>
                         </th>
                         <th class="prob_num">
@@ -72,7 +71,7 @@
                         <td><a [href]="problem.problemLink" target="_blank">{{ problem.code }}</a></td>
                         <td> <a href="problem/{{problem.onlineJudge}}/{{problem.code}}">{{ problem.title }}</a>
                         </td>
-                        <td><a [href]="problem.contestLink" target="_blank">{{ problem.contestName }}</a></td>
+                        <td><a [href]="problem.contestLink ?? '/problem'">{{ problem.contestName }}</a></td>
                         <td>{{ problem.solvedCount }}</td>
                     </tr>
                 </tbody>
