--- a/src/app/Components/status/status.component.html
+++ b/src/app/Components/status/status.component.html
@@ -38,8 +38,7 @@
                             <select [(ngModel)]="oj" id="OJ_s_Id" name="OJ_s_Id" class="search_text" style="width:100%"
                                 (change)="filterSubmissions()">
                                 <option value="">All</option>
-                                <option value="CodeForces">CodeForces</option>
-                                <option value="AtCoder">AtCoder</option>
+                                <option *ngFor="let onlineJudge of onlineJudges" [value]="onlineJudge">{{onlineJudge}}</option>
                             </select>
                         </th>
                         <th class="title">
