تعديلات مش مهمه

--- a/src/app/Components/problem-selector-hashtag/problem-selector-hashtag.component.html
+++ b/src/app/Components/problem-selector-hashtag/problem-selector-hashtag.component.html
@@ -1,9 +1,10 @@
 <!-- problem-selector-hashtag.component.html -->
 
-<div class="col-xs-6 col-sm-12 d-flex">
-    <div *ngFor="let problem of problemSet">
-      <a type="button" style="text-decoration: none; color:blue" class="me-4">{{ problem.problemHashtag }}</a>
-      <h1>hamboza </h1>
-    </div>
+<div class="col-xs-6 col-sm-12 d-flex" >
+  <h1>hamboza </h1>
+  <div   style="background-color: red; height: 100px;" *ngFor="let problem of contest;" >
+ <a type="button" style="text-decoration: none; color:blue" class="me-4">{{ problem.propHashtag }}</a> 
+<!-- <app-problem-selector-hashtag></app-problem-selector-hashtag> -->
+</div>
   </div>
   
