--- a/src/app/Components/problem-details/problem-details.component.html
+++ b/src/app/Components/problem-details/problem-details.component.html
@@ -6,11 +6,8 @@
                 <div class=" mt-5 w-100">
                     <div class=" text-center w-100 " >
                      
-                        <div class="col-xs-6 col-sm-12 d-flex">
-                            <div >
-                              <a type="button" style="text-decoration: none; color:blue" class="me-4">{{ problemSet.problemHashtag }}</a>
-                              <h1>hamboza </h1>
-                            </div>
+                        <div class="col-xs-6 col-sm-12 d-flex"  [class.d-none]="showButtons == false">
+                           <app-problem-selector-hashtag></app-problem-selector-hashtag>
                           </div>
                           
                     </div>    
