--- a/src/app/Components/not-found/not-found.component.html
+++ b/src/app/Components/not-found/not-found.component.html
@@ -1,6 +1,6 @@
-<div class="row justify-content-center align-items-center py-5">
+<div class="justify-content-center align-items-center py-3">
 
-    <div class="w-75 mx-auto">
+    <div>
 
         <img [src]="imageNotFound" class="w-100 h-100">
 
