--- a/src/app/Components/group/group.component.css
+++ b/src/app/Components/group/group.component.css
@@ -1,11 +1,11 @@
-/* judge.component.css */
+
 .navbar {
     display: flex;
     justify-content: space-between;
     align-items: center;
     padding: 10px;
     margin: 50px;
-    
+
     border-bottom: 2px solid #ddd;
 }
 
@@ -15,31 +15,32 @@
 }
 
 .nav-item {
-    margin-right: 50px; /* Adjust spacing between nav items */
+    margin-right: 50px;
 }
 
 .nav-link {
-    color: black; /* Set default color */
-    text-decoration: none; /* Remove underline */
-    transition: background-color 0.3s, color 0.3s; /* Smooth transition */
+    color: black;
+    text-decoration: none;
+    transition: background-color 0.3s, color 0.3s;
 }
 
 .nav-link:hover {
-    background-color: white; /* Change background color to white when active */
-    color: blue; /* Change text color to blue when active */
-    padding: 10px; /* Add padding */
-    width: 100px; /* Add width */
-    height: 45px; /* A
+    background-color: white;
+    color: blue;
+    padding: 10px;
+    width: 100px;
+    height: 45px;
 }
 
 .nav-link.active {
-    background-color: white; /* Change background color to white when active */
-    color: blue; /* Change text color to blue when active */
-    padding: 10px; /* Add padding */
-    width: 100px; /* Add width */
-    height: 40px; /* A
+    background-color: white;
+    color: blue;
+    padding: 10px;
+    width: 100px;
+    height: 40px;
 }
 
 .btn-primary {
-    background-color: blue; /* Set button background color to blue */
+    background-color: blue;
+    /* Set button background color to blue */
 }
