fix: Fix create contest problem

--- a/src/app/Components/create-contest/create-contest.component.html
+++ b/src/app/Components/create-contest/create-contest.component.html
@@ -145,7 +145,7 @@
                                 <option *ngFor="let onlineJudge of onlineJudges" [value]="onlineJudge">{{onlineJudge}}</option>
                             </select>
                         </td>
-                        <td><input class="form-control" formControlName="problemCode"></td>
+                        <td><input class="form-control" formControlName="code"></td>
                         <td><input class="form-control text-center" type="number" formControlName="problemWeight"></td>
                         <td><input class="form-control" formControlName="problemAlias"></td>
                         <td class="text-center">{{getLetter(i)}}</td>
