--- a/src/app/Components/problem-details/problem-details.component.css
+++ b/src/app/Components/problem-details/problem-details.component.css
@@ -15,7 +15,7 @@
 #prob-statistics dl {
     font-size: 12px;
     overflow: hidden;
-    padding: 5px 0;
+    /* padding: 5px 0; */
 }
 
 .btn-secondary {
