--- a/src/app/Components/problem-details/problem-details.component.html
+++ b/src/app/Components/problem-details/problem-details.component.html
@@ -1,31 +1,32 @@
-<div class="container-fluid text-center  " style="background-color:#ebebeb">
-    <div class="row ms-5 justify-content-around">
+<div class="container-fluid text-center  ">
+   <div class="row ms-5 justify-content-around"> <!-- use ngStyle to handle ms-5 to remove it in problem from contest!! -->
         <div class="col-xl-3 col-lg-4 mt-3 justify-content-around text-center pe-5">
 
             <div id="prob-operation" class="row ">
                 <div class=" mt-5 w-100">
-                    <div class=" text-center w-100 " >
-                     
-                        <div class="col-xs-6 col-sm-12 d-flex"  [class.d-none]="showButtons == false">
-                           <app-problem-selector-hashtag></app-problem-selector-hashtag>
-                          </div>
-                          
-                    </div>    
+                    <div class=" text-center w-100 ">
+
+                        <div class="col-xs-6 col-sm-12 d-flex" [class.d-none]="showButtons == false">
+                           <div class="d-flex text-center justify-content-center ">
+                                <a type="button" (click)="getProblemDetailsFromContest(problem.problemHashtag)"  style="text-decoration: none; color:blue"  *ngFor=" let problem of problemSet; let i = index " >{{ problem.problemHashtag }}</a>
+                            </div>
+                        </div>
+
+                    </div>
                     <div class="col-xs-8">
                         <button (click)="openModal()" type="button" class="btn btn-success">
                             <i class="fa fa-check"></i> Submit </button>
                     </div>
                 </div>
 
-           
-             <!-- contest problem --> 
-                <div class=" text-center w-100 "  [class.d-none]="showButtons == false">
-                    <div class=" col-xs-6 col-sm-12" >
-                        <button type="button" class="btn btn-secondary" > <i class="fa fa-list-ul "></i>Status </button>
+
+                <!-- contest problem -->
+                <div class=" text-center" [class.d-none]="showButtons == false">
+                    <div class=" col-xs-6 col-sm-12">
+                        <button type="button" class="btn btn-secondary "> Status </button>
                     </div>
                     <div class="col-xs-6 col-sm-12">
-                        <button type="button" class="btn btn-secondary"> <i class="fa fa-list-ol "></i>My Status
-                        </button>
+                        <button type="button" class="btn btn-secondary">My Status</button>
                     </div>
                 </div>
 
@@ -42,17 +43,17 @@
             <div id="prob-properties" class="ms-0 w-100">
                 <div class="card w-100">
                     <div class="d-flex" *ngFor="let property of problemInfo.properties">
-                        <dt class="col-sm-4">{{property.title}}</dt>
-                        <dd class="col-sm-6 ms-5">{{property.content}}</dd>
+                        <dt class="">{{property.title}}</dt>
+                        <dd class="">{{property.content}}</dd>
                     </div>
                 </div>
             </div>
 
             <div id="prob-statistics" class="text-center mt-3 ms-0 w-100">
-                <dl class="card">
+                <dl class="card w-100">
                     <div class="d-flex">
-                        <dt class="col-sm-4">Submissions</dt>
-                        <dd class="col-sm-8"><span title="Remote">{{problemInfo.submissions}}</span></dd>
+                        <dt class="">Submissions</dt>
+                        <dd class=""><span title="Remote">{{problemInfo.submissions}}</span></dd>
 
                     </div>
                 </dl>
@@ -89,11 +90,12 @@
 
         </div>
 
-        <div class="col-lg-8 text-start mb-5" style="background-color:#ebebeb">
+        <div class="col-lg-8 text-start mb-5 me-5" >
             <div class="d-flex mt-5 ">
                 <h2 class="text-bold"
                     style="font-family: Arial, sans-serif; font-size: 24px; font-weight: bold; line-height: 1.5; color: #333;">
-                    <i class="fas fa-star"></i>{{problemInfo.title}}</h2>
+                    <i class="fas fa-star"></i>{{problemInfo.title}}
+                </h2>
                 <p class="mt-2 ms-2"
                     style="font-family: Arial, sans-serif; font-size: 18px; line-height: 1.5; color: #666;">
                     <a [href]="problemInfo.problemLink" [class.d-none]="showButtons == true" target="_blank"
@@ -103,7 +105,8 @@
                 </p>
             </div>
             <div class="row" style="border-radius: 10px;">
-                <iframe #myIframe class="w-full h-full" id="prob-statement" [src]="descriptionUrl" scrolling="no" style="width: 100%; height: 5000px;"></iframe>
+                <iframe #myIframe class="w-full h-full" id="prob-statement" [src]="descriptionUrl" scrolling="no"
+                    style="width: 100%; height: 5000px;"></iframe>
             </div>
         </div>
     </div>
