Add: binding problemSet for <app-contest-rank>

--- a/src/app/Components/contest-details/contest-details.component.html
+++ b/src/app/Components/contest-details/contest-details.component.html
@@ -90,7 +90,7 @@
                         <app-contest-status></app-contest-status>
                     </div>
                     <div *ngIf="selectedButton === 'rank' && (contest.contestStatus !== 'SCHEDULED' || isLeaderOrManager)">
-                        <app-contest-rank></app-contest-rank>
+                        <app-contest-rank [problemSet]="problemSet" [contestId] = "contestId"></app-contest-rank>
                     </div>
                 </div>
             </div>
